--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cv-project",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://kindaexists.github.io/cv-project/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
